--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -208,10 +208,69 @@ color: #163247;
 
 }
 .embla__container {
-display: flex;
-/* justify-content: ; */
+    display: flex;
 }
 .embla__slide {
-flex: 0 0 100%;
-min-width: 0;
+    flex: 0 0 100%;
+    min-width: 0;
+}
+.travelCar{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    column-gap: 50px;
+}
+.trvelExpCar{
+    display: flex;
+    align-items: center;
+    justify-items: center;
+}
+.expcard{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    background-color: #B4DCFA;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+    width: 280px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.travelRate{
+    display: flex;
+    
+}
+
+.travelRate .rating{
+    margin: 0 4px
+}
+
+.travelDesc{
+    margin: 20px 10px ;
+    font-style: normal;
+    font-weight: 4300;
+    font-size: 16px;
+    line-height: 163.15%;
+    color: #163247;
+}
+
+.traveller{
+    display: flex;  
+    width: 100%;
+    
+}
+.travellerProf{
+    margin: 0 10px;
+}
+
+.travellerDes{
+    display: flex;
+    flex-direction: column;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 163.15%;
+    color: #163247;
+    padding: 0 5px;
 }
