--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,10 +215,15 @@ color: #163247;
     min-width: 0;
 }
 .travelCar{
+    margin: 60px 0 60px 250px;
+    /* margin-left: 250px; */
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
     column-gap: 50px;
+    width: 100vw;;
+    /* height: ; */
 }
 .trvelExpCar{
     display: flex;
@@ -273,4 +278,25 @@ color: #163247;
     line-height: 163.15%;
     color: #163247;
     padding: 0 5px;
+}
+
+.travelCar .embla {  
+    overflow: hidden;
+}
+.travelCar .embla__container {  
+    display: flex;
+}
+.travelCar .embla__slide {  
+    flex: 0 0 33%;  
+    margin: 0 -25px;
+    min-width: 0;
+}
+
+.travelCar .arrow{
+    display: flex;
+    justify-content: end;
+    row-gap: 20px;
+    column-gap: 50px;
+    margin: 20px 70px;
+    align-items: center;
 }
