--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -163,16 +163,26 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
-.card_img{
-background-color: #B4DCFA;
-/* height: 300px; */
+.deal_card{
+    background-color: #B4DCFA;
+height: 300px;
 width: fit-content;
 padding: 25px 30px;
 border-radius: 15px;
 box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+
 }
-.card_img h1{
+/* .card_img{
+background-color: #B4DCFA;
+height: 300px;
+width: fit-content;
+padding: 25px 30px;
+border-radius: 15px;
+box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+} */
+/* .card_img h1{
 font-style: normal;
 font-weight: 700;
 font-size: 16px;
@@ -180,7 +190,7 @@ margin: 10px 0;
 letter-spacing: 0.25em;
 color: #163247;
 text-align: center;
-}
+} */
 
 .card_caption{
 margin: 20px 0 0 20px;
@@ -299,4 +309,49 @@ color: #163247;
     column-gap: 50px;
     margin: 20px 70px;
     align-items: center;
+}
+.card_frame{
+    display: flex;
+    column-gap: 50px;
+    margin: 50px 0;
+}
+
+.card_img{
+    background-color: #B4DCFA;
+    height: 300px;
+    padding: 25px 30px;
+    border-radius: 15px;
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.3);
+}
+.card_img img{
+    width: 350px;
+}
+.card_img h1{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    margin: 10px 0;
+    letter-spacing: 0.25em;
+    color: #163247;
+    text-align: center;
+}
+.card_caption{
+    margin: 20px 0 0 5px;
+    max-width: 370px;
+}
+.card_caption h2{
+    font-style: normal;
+    font-weight: 800;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.25em;
+    color: #163247;
+}
+.card_caption p{
+    margin: 1.4vh 0 2.8vh;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 23px;
+    color: #163247;
 }
