--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
+/* import "slick-carousel/slick/slick.css";
+import "slick-carousel/slick/slick-theme.css"; */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 body{
     background-color: #ecf7fd;
