--- a/src/styles/Landing.module.css
+++ b/src/styles/Landing.module.css
@@ -5,21 +5,26 @@
   align-items: center;
 }
 
-.head_text{
+.headText{
   /* FONT FAMILY STORYBOOK NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
   font-family: 'Storybook';
   font-style: normal;
   line-height: 163.15%;
   text-align: center;
   color: #163247;
+  font-weight: 700;
+  font-size: 100px;
 }
 
-.sub_text{
+.subText{
   /* FONT FAMILY GILROY NOT FOUND; NEED TO BE IMPORTED AND USED HERE */
   font-style: normal;
   text-align: center;
   color: #163247;
   margin: -30px 0 0 0;
+  font-weight: 300;
+  width: 220px;
+  font-size: 26px;
 }
 
 .desc{
@@ -28,9 +33,34 @@
   margin: 2vh 0;
   text-align: center;
   color: #163247;
+  font-weight: 300; 
+  /* color: 16px; */
+  width: 350px;
 }
 
 .search{
   display: flex;
   margin: 10vh 0 0 0;
+  display: flex; 
+  flex-direction: column; 
+  row-gap: 0.5rem; 
+  align-items: center; 
+}
+
+@media (min-width: 640px) {
+  .headText{
+    font-weight: 500;
+    font-size: 17vh;
+  }
+  .search{
+    flex-direction: row; 
+  }
+  .desc{
+    width: 750px;
+    font-size: 22px;
+  }
+  .subText{
+    font-size: 6.2vh;
+    width: 800px;
+  }
 }
