--- a/src/styles/TravellerExpCaraousel.module.css
+++ b/src/styles/TravellerExpCaraousel.module.css
@@ -1,5 +1,5 @@
 .travelCar{
-  margin: 60px 0 60px 250px;
+  margin: 60px 0;
   /* margin-left: 250px; */
   width: auto;
   display: flex;
@@ -30,4 +30,5 @@
   column-gap: 50px;
   margin: 20px 70px;
   align-items: center;
+  justify-items: end;
 }
