--- a/src/styles/TravellerExpCaraousel.module.css
+++ b/src/styles/TravellerExpCaraousel.module.css
@@ -1,15 +1,11 @@
 .travelCar{
-  margin: 60px 0;
-  /* margin-left: 250px; */
   width: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: 50px;
-  /* width: 100vw;; */
-  /* height: ; */
-}
 
+}
 
 .travelCar .embla {  
   overflow: hidden;
@@ -25,10 +21,8 @@
 
 .travelCar .arrow{
   display: flex;
-  justify-content: end;
-  row-gap: 20px;
-  column-gap: 50px;
-  margin: 20px 70px;
   align-items: center;
-  justify-items: end;
+  justify-content: space-between;
+  margin-top: 8rem;
+  gap: 2.25rem;
 }
